Change Today component
Create Today.tsx
Added minuts from dataBase
Change long path img to short path

--- a/src/components/Statistic.astro
+++ b/src/components/Statistic.astro
@@ -1,5 +1,5 @@
 ---
-import statistic from "../../public/statistic.svg";
+import statistic from "../statistic.svg";
 
 export interface Props {
   href: string;
