--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import ButtonTimer from "../components/ButtonTimer";
 import Statistic from "../components/Statistic.astro";
-import Today from "../components/Today.astro";
+import Today from "../components/Today";
 
-import avatar from "../../public/avatar.svg";
-import celendar from "../../public/celendar.svg";
-import swipeweek from "../../public/swipeweek.svg";
+import avatar from "../avatar.svg";
+import celendar from "../celendar.svg";
+import swipeweek from "../swipeweek.svg";
 ---
 
 <Layout title="Bored Calendar">
@@ -21,7 +21,7 @@ import swipeweek from "../../public/swipeweek.svg";
     </div>
     <img src={swipeweek} />
     <Statistic href="" />
-    <Today href="" />
+    <Today client:only="react" />
     <div class="flex items-center justify-center">
       <ButtonTimer client:only="react" />
     </div>
