enable SSR; make `yarn build && yarn preview` work
- button doesn't not work in prod, so it will be hidden in prod

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,5 @@ import App from "../../src/components/App";
 ---
 
 <Layout title="Bored Calendar">
-  <App client:only="react" />
+  <App client:load />
 </Layout>
